# website-monitor-cli

./: .gitignore  README.md  pyproject.toml
src/cli_boilerplate/: __init__.py  main.py
src/cli_boilerplate/commands/: demo.py
src/cli_boilerplate/ui/: __init__.py  console.py
src/website_monitor_cli/: __init__.py  config.py  core.py  main.py  models.py
src/website_monitor_cli/commands/: monitor.py
src/website_monitor_cli/ui/: console.py  tui_form.py
tests/: README.md  run_tests.sh  test_cli.py  test_server.py
