[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "website-monitor-cli"
version = "0.1.0"
description = "Boilerplate for building polished Python CLI tools."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer",
  "rich",
]

[project.scripts]
website-monitor = "cli_boilerplate.main:main"

[dependency-groups]
dev = [
  "mypy",
  "pytest",
  "pytest-cov",
  "ruff",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/cli_boilerplate"]
